--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Parisienne&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 :root {
     --eggshell: #f4f1deff;
@@ -13,11 +14,10 @@
 html, body {
     width: 100%;
     margin: 0px;
-    height: 100%;
 }
 
 body {
-    background-image: linear-gradient(to bottom right, var(--deep-champagne) , var(--eggshell) , var(--deep-champagne));
+    background-image: url('./cafe.jpg');
 }
 
 #content {
@@ -77,7 +77,7 @@ hr {
 }
 
 .active {
-    background-color: rgb(40, 42, 61);
+    border-bottom: 2px solid var(--eggshell);
 }
 
 #nav > div > p {
@@ -85,4 +85,29 @@ hr {
     font-family: var(--great-vibes-font);
     font-size: 2em;
     margin: 20px  0px;
+}
+
+/* MAIN-PAGE.JS CSS */
+
+#main {
+    width: 60vw;
+    padding: 50px 75px;
+    background-color: rgba(244, 241, 222, 0.384);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 0px;
+    border-radius: 1%;
+}
+
+#main > img {
+    width: 60vw;
+    border: 10px solid rgba(242, 204, 143, 0.50);
+}
+
+#main > p {
+    font-family: 'Lobster';
+    font-size: 3em;
+    color: var(--independence);
+    text-shadow: 4px 0px 0px var(--eggshell);
 }
