Rearranged files and started the menu page

--- a/src/asset/style.css
+++ b/src/asset/style.css
@@ -17,7 +17,7 @@ html, body {
 }
 
 body {
-    background-image: url('./cafe.jpg');
+    background-image: url('./images/cafe.jpg');
 }
 
 #content {
